--- a/new/css/main.css
+++ b/new/css/main.css
@@ -421,7 +421,7 @@ button:focus {
 }
 
 #hero-area .contents {
-  padding: 200px 0 130px;
+  padding: 230px 0 190px;
 }
 
 #hero-area .contents h1 {
@@ -908,7 +908,7 @@ button:focus {
 .pricing-table .pricing-details h2 {
   font-size: 26px;
   font-weight: 700;
-  color: #333;
+  color: #eee;
   margin-bottom: 20px;
   text-transform: uppercase;
   background: #f1f1f1;
