--- a/new/css/main.css
+++ b/new/css/main.css
@@ -57,7 +57,7 @@ p {
 }
 
 a:hover, a:focus {
-  color: #61D2B4;
+  color: #33b391;
 }
 
 a {
@@ -94,7 +94,7 @@ a:not([href]):not([tabindex]) {
 }
 
 a:not([href]):not([tabindex]):focus, a:not([href]):not([tabindex]):hover {
-  color: #61D2B4;
+  color: #33b391;
 }
 
 /* ==========================================================================
@@ -120,7 +120,7 @@ a:not([href]):not([tabindex]):focus, a:not([href]):not([tabindex]):hover {
 }
 
 .section-header .section-title span {
-  color: #61D2B4;
+  color: #33b391;
 }
 
 .section-header .section-subtitle {
@@ -134,7 +134,7 @@ a:not([href]):not([tabindex]):focus, a:not([href]):not([tabindex]):hover {
   margin: auto;
   width: 70px;
   position: relative;
-  border-top: 2px solid #61D2B4;
+  border-top: 2px solid #33b391;
   margin-top: 15px;
 }
 
@@ -163,8 +163,8 @@ a:not([href]):not([tabindex]):focus, a:not([href]):not([tabindex]):hover {
 }
 
 .btn-common {
-  border: 1px solid #61D2B4;
-  background: #61D2B4;
+  border: 1px solid #33b391;
+  background: #33b391;
   position: relative;
   color: #eee;
   z-index: 1;
@@ -173,8 +173,8 @@ a:not([href]):not([tabindex]):focus, a:not([href]):not([tabindex]):hover {
 
 .btn-common:hover {
   color: #eee;
-  background: #33b391;
-  border-color: #33b391;
+  background: #00b391;
+  border-color: #00b391;
   transition: all .50s ease-in-out;
   -moz-transition: all .50s ease-in-out;
   -webkit-transition: all .50s ease-in-out;
@@ -190,7 +190,7 @@ a:not([href]):not([tabindex]):focus, a:not([href]):not([tabindex]):hover {
 .btn-border:hover {
   border: 2px solid #eee;
   color: #eee;
-  background-color: #61D2B4;
+  background-color: #33b391;
 }
 
 .btn-lg {
@@ -340,7 +340,7 @@ button:focus {
   width: 100%;
   height: 100%;
   border-radius: 50%;
-  background-color: #61D2B4;
+  background-color: #33b391;
   opacity: 0.6;
   position: absolute;
   top: 0;
@@ -393,7 +393,7 @@ button:focus {
   font-size: 14px;
   text-align: center;
   border-radius: 4px;
-  background-color: #61D2B4;
+  background-color: #33b391;
   -webkit-transition: all 0.2s linear;
   -moz-transition: all 0.2s linear;
   -o-transition: all 0.2s linear;
@@ -404,6 +404,7 @@ button:focus {
    3. Hero Area
    ========================================================================== */
 #hero-area {
+  background-image: url(../img/bg.jpg);
   background-size: cover;
   color: #eee;
   overflow: hidden;
@@ -416,7 +417,7 @@ button:focus {
   height: 100%;
   top: 0px;
   left: 0px;
-  background: #61D2B4;
+  background: #33b391;
   opacity: 0.9;
 }
 
@@ -459,7 +460,7 @@ button:focus {
 }
 
 #hero-area .banner_bottom_btn i:hover {
-  color: #61D2B4;
+  color: #33b391;
 }
 
 /* ==========================================================================
@@ -468,6 +469,10 @@ button:focus {
 .navbar-brand {
   position: relative;
   padding: 0px;
+}
+
+.scrolling-navbar {
+  opacity:0;
 }
 
 .top-nav-collapse {
@@ -495,11 +500,12 @@ button:focus {
 }
 
 .top-nav-collapse .navbar-nav .nav-link:hover {
-  color: #61D2B4 !important;
+  color: #33b391 !important;
 }
 
 .top-nav-collapse .navbar-nav .nav-link.active {
   color: #eee !important;
+  background: #33b391 !important;
 }
 
 .indigo {
@@ -522,12 +528,11 @@ button:focus {
 .navbar-expand-lg .navbar-nav li a:hover,
 .navbar-expand-lg .navbar-nav li .active > a,
 .navbar-expand-lg .navbar-nav li a:focus {
-  color: #61D2B4;
+  color: #33b391;
 }
 
 .navbar .nav-link.active {
-  color: #eee !important;
-  background: #61D2B4;
+  color: #33b391;
 }
 
 .dropdown-toggle::after {
@@ -535,12 +540,12 @@ button:focus {
 }
 
 .slicknav_btn {
-  border-color: #61D2B4;
+  border-color: #33b391;
   margin-top:8px;
 }
 
 .slicknav_menu .slicknav_icon-bar {
-  background: #61D2B4;
+  background: #33b391;
   margin-top:0px;
 }
 
@@ -582,16 +587,16 @@ button:focus {
     display: block;
   }
   .slicknav_nav .active a {
-    background: #61D2B4;
+    background: #33b391;
     color: #eee;
   }
   .slicknav_nav a:hover, .slicknav_nav .active {
-    color: #61D2B4;
+    color: #33b391;
     background: #f8f9fa;
   }
   .slicknav_nav .dropdown li a.active {
     background: #f8f9fa;
-    color: #61D2B4;
+    color: #33b391;
   }
 }
 
@@ -623,7 +628,7 @@ button:focus {
 .item-boxes .icon i {
   font-size: 26px;
   line-height: 60px;
-  color: #61D2B4;
+  color: #33b391;
 }
 
 .item-boxes h4 {
@@ -633,7 +638,7 @@ button:focus {
 }
 
 .item-boxes:hover .icon {
-  background: #61D2B4;
+  background: #33b391;
 }
 
 .item-boxes:hover .icon i {
@@ -674,7 +679,7 @@ button:focus {
 }
 
 #features .box-item .icon {
-  border: 1px solid #61D2B4;
+  border: 1px solid #33b391;
   text-align: center;
   float: left;
   -webkit-transition: all 0.2s linear;
@@ -684,7 +689,7 @@ button:focus {
 }
 
 #features .box-item .icon i {
-  color: #61D2B4;
+  color: #33b391;
   font-size: 24px;
   line-height: 60px;
   -webkit-transition: all 0.2s linear;
@@ -698,7 +703,7 @@ button:focus {
 }
 
 #features .box-item .text h4 {
-  color: #61D2B4;
+  color: #33b391;
   font-weight: 700;
   font-size: 16px;
   text-transform: uppercase;
@@ -712,7 +717,7 @@ button:focus {
 }
 
 #features .box-item:hover .icon {
-  background: #61D2B4;
+  background: #33b391;
 }
 
 #features .box-item:hover .icon i {
@@ -721,8 +726,8 @@ button:focus {
 
 #features .show-box img {
   position: absolute;
-  bottom: -50px;
-  left: 140px;
+  bottom: -40px;
+  left: 130px;
   opacity:0.6;
   transform: rotate(30deg);
 }
@@ -731,7 +736,7 @@ button:focus {
   7. Video promo Style
    ========================================================================== */
 .video-promo {
-  background: #61D2B4;
+  background: #33b391;
   color: #eee;
   overflow: hidden;
   position: relative;
@@ -776,7 +781,7 @@ button:focus {
   height: 100%;
   top: 0px;
   left: 0px;
-  background: #61D2B4;
+  background: #33b391;
   opacity: 0.9;
   filter: alpha(opacity=90);
 }
@@ -802,8 +807,8 @@ button:focus {
 }
 
 .controls .active {
-  color: #61D2B4 !important;
-  border-color: #61D2B4;
+  color: #33b391 !important;
+  border-color: #33b391;
   background: transparent;
 }
 
@@ -856,7 +861,7 @@ button:focus {
   height: 48px;
   width: 48px;
   line-height: 48px;
-  color: #61D2B4;
+  color: #33b391;
   left: 50%;
   margin-left: -24px;
   margin-top: -24px;
@@ -871,12 +876,12 @@ button:focus {
   -webkit-transition: all 0.5s ease-in-out;
   -moz-transition: all 0.5s ease-in-out;
   transition: all 0.5s ease-in-out;
-  border: 1px solid #61D2B4;
+  border: 1px solid #33b391;
   border-radius: 50%;
 }
 
 .overlay .item-icon:hover {
-  background: #61D2B4;
+  background: #33b391;
   color: #eee;
 }
 
@@ -919,7 +924,7 @@ button:focus {
   display: inline-block;
   font-size: 48px;
   font-weight: 400;
-  color: #61D2B4;
+  color: #33b391;
   margin-bottom: 20px;
 }
 
@@ -1013,7 +1018,7 @@ button:focus {
 }
 
 .owl-theme .owl-controls .owl-page span {
-  background: #61D2B4;
+  background: #33b391;
 }
 
 .owl-theme .owl-controls {
@@ -1033,7 +1038,7 @@ button:focus {
   transition: 0.5s;
   box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1);
   border-radius: 0px;
-  background: #61D2B4;
+  background: #33b391;
   overflow: hidden;
 }
 
@@ -1078,7 +1083,7 @@ button:focus {
   text-align: center;
   width: 34px;
   margin: 2px;
-  color: #61D2B4;
+  color: #33b391;
   font-size: 14px;
   background: #eee;
   border-radius: 50px;
@@ -1148,7 +1153,7 @@ button:focus {
 }
 
 #blog .blog-item-text h3 a:hover {
-  color: #61D2B4;
+  color: #33b391;
 }
 
 #blog .blog-item-text p {
@@ -1174,7 +1179,7 @@ button:focus {
 }
 
 .meta-tags span a:hover {
-  color: #61D2B4;
+  color: #33b391;
 }
 
 /* ==========================================================================
@@ -1186,7 +1191,7 @@ button:focus {
 }
 
 .contact-us p span {
-  color: #61D2B4;
+  color: #33b391;
   padding-left: 10px;
 }
 
@@ -1213,7 +1218,7 @@ button:focus {
 .form-control:focus {
   box-shadow: none;
   color: #eee;
-  border-color: #61D2B4;
+  border-color: #33b391;
   background: transparent;
   outline: none;
 }
@@ -1256,7 +1261,7 @@ footer {
 }
 
 .footer-links li a:hover {
-  color: #61D2B4;
+  color: #33b391;
 }
 
 .copyright {
@@ -1273,5 +1278,5 @@ footer {
 }
 
 .copyright p a:hover {
-  color: #61D2B4;
+  color: #33b391;
 }
